<resources>
    <string name="app_name">StoryApp</string>
    <string name="circle_image_view">circle_image_view</string>
    <string name="welcome_to_storyapp">Welcome To StoryApp!</string>
    <string name="immerse_yourself_in_a_world_of_stories_where_imagination_meets_reality">Immerse yourself in a world of stories, where imagination meets reality.</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="sign_up">Sign Up!</string>
    <string name="full_name_hint">Full Name</string>
    <string name="register_button_text">Register</string>
    <string name="story_image">Story Image</string>
    <string name="logout">Logout</string>
    <string name="add_story">Add Story</string>
    <string name="wrong_username_or_password_message">Oops! Did you mistype your username or password, or is your cat walking on the keyboard again? \uD83D\uDE40</string>
    <string name="registration_success">Registration successful</string>
    <string name="registration_failure">Oops! It looks like that email is already taken. Try another one and let\'s get you signed up! \\uD83D\\uDE04</string>
    <string name="image_view_upload">Image View Upload</string>
    <string name="camera_button_text">Camera</string>
    <string name="gallery_button_text">Gallery</string>
    <string name="description">Description</string>
    <string name="story_uploaded_successfully">Story uploaded successfully</string>
    <string name="upload_button_text">Upload</string>
    <string name="open_maps_button">Open Maps Button</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="please_enter_a_description">Please enter a description</string>
</resources>