<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/circleImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="64dp"
        app:cardCornerRadius="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/circle_image_view"
            android:src="@drawable/ic_launcher_foreground" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:text="@string/welcome_to_storyapp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImage" />

    <TextView
        android:id="@+id/tvGreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:text="@string/immerse_yourself_in_a_world_of_stories_where_imagination_meets_reality"
        app:layout_constraintEnd_toEndOf="@+id/tvWelcome"
        app:layout_constraintStart_toStartOf="@+id/tvWelcome"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <EditText
        android:id="@+id/edLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGreet" />

    <com.arya.storyapp.ui.customview.PasswordEditText
        android:id="@+id/edLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edLoginEmail"
        app:layout_constraintStart_toStartOf="@+id/edLoginEmail"
        app:layout_constraintTop_toBottomOf="@+id/edLoginEmail" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:text="@string/login_button_text"
        app:layout_constraintEnd_toEndOf="@+id/edLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/edLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/edLoginPassword" />

    <TextView
        android:id="@+id/tvNotRegistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/not_registered_yet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:enabled="true"
        android:text="@string/sign_up"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvNotRegistered"
        app:layout_constraintStart_toEndOf="@+id/tvNotRegistered"
        app:layout_constraintTop_toTopOf="@+id/tvNotRegistered" />


</androidx.constraintlayout.widget.ConstraintLayout>